addons/opa-gatekeeper/container-registries/cases/untrusted-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/kryshakm/nginx-demo:latest
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
  terminationGracePeriodSeconds: 0
